Correct z-index in profile menu

--- a/Frontend/src/app/components/global/navbar/navbar.component.scss
+++ b/Frontend/src/app/components/global/navbar/navbar.component.scss
@@ -102,6 +102,7 @@
 
 
 .profile-menu-container{
+  z-index: 1000;
   position: absolute;
   top: calc(var(--navbar-height) + 1rem);
   right: 1rem;
